    Fix for Bug 692375.  Comparing two structures with memcmp() is a bad idea.

Code in gdevprn.c relied on memcmp() to compare two structures;
    this isn't allowed by C since there can be gaps in the structure
    due to padding.  This issue was exposed when llvm-gcc became the
    default compiler in Xcode 4.  The fix is to compare the structures
    element by element.

    For more information see: http://c-faq.com/struct/compare.html

    No expected cluster difference since none of the cluster nodes use
    llvm-gcc.